--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -24,3 +24,9 @@
     color: inherit;
     text-decoration: none;
 }
+
+:global(h1) {
+    font-weight: 200;
+    font-size: clamp(3rem, 5vw, 6rem);
+    text-transform: capitalize;
+}
