--- a/app/src/styles/abstracts/_theme.scss
+++ b/app/src/styles/abstracts/_theme.scss
@@ -1,8 +1,13 @@
-$text: #d9c193;
-$textLight: #a69371;
-$textDark: #73654c;
-$accent: #dfaf55;
-
-$primary: #0b0b0b;
-
 $borderRadius: 0.5rem;
+$borderWidth: 0.1rem;
+
+$colors: (
+    beige: hsl(39, 48%, 71%),
+    beige-light: hsl(38, 23%, 55%),
+    beige-dark: hsl(38, 20%, 37%),
+    gold: hsl(39, 68%, 60%),
+    black: hsl(0, 0%, 4%),
+    black-light: hsl(0, 0%, 10%),
+    black-dark: hsl(0, 0%, 0%),
+    white: hsl(45, 8%, 79%)
+);
