--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -1,5 +1,34 @@
 @use "styles/abstracts" as *;
 
+:global(:root) {
+    // Base colors
+    @each $name, $color in $colors {
+        --color-#{"" + $name}: #{$color};
+    }
+
+    @media (prefers-color-scheme: dark) {
+        // Text
+        --theme-text: var(--color-beige);
+        --theme-text-dark: var(--color-beige-dark);
+        --theme-text-light: var(--color-beige-light);
+
+        // Elements
+        --theme-accent: var(--color-gold);
+        --theme-primary: var(--color-black);
+    }
+
+    @media (prefers-color-scheme: light) {
+        // Text
+        --theme-text: var(--color-black);
+        --theme-text-dark: var(--color-black-dark);
+        --theme-text-light: var(--color-black-light);
+
+        // Elements
+        --theme-accent: rgb(141, 63, 11); // TODO: find a pallete that actually works
+        --theme-primary: var(--color-white);
+    }
+}
+
 :global(*) {
     font-feature-settings:
         "pnum" on,
@@ -16,8 +45,8 @@
     height: 100%;
 
     overflow-x: hidden;
-    background-color: $primary;
-    color: $text;
+    background-color: var(--theme-primary);
+    color: var(--theme-text);
 }
 
 :global(a) {
