✨ Added rudimentary lobby page

--- a/app/src/styles/abstracts/_breakpoint.scss
+++ b/app/src/styles/abstracts/_breakpoint.scss
@@ -45,6 +45,12 @@ $screen-xl-min: 1200px;
   }
 }
 
+@mixin reducedMotion() {
+  @media (prefers-reduced-motion: reduce) {
+    @content;
+  }
+}
+
 @mixin pointer() {
   @media (pointer: fine) {
     @content;
