--- a/app/src/styles/abstracts/_component.scss
+++ b/app/src/styles/abstracts/_component.scss
@@ -1,5 +1,3 @@
-@use "theme" as *;
-
 $font-sm: 0.8125rem;
 $font-md: 0.875rem;
 $font-lg: 1rem;
@@ -13,13 +11,13 @@ $margin: 0.2em;
   padding-inline: $paddingInline;
   margin: $margin;
 
-  border-radius: $borderRadius;
+  border-radius: var(--border-radius);
   line-height: 1;
   font-weight: 600;
 }
 
 @mixin avatar() {
-  border: $border;
+  border: var(--border-width) solid currentColor;
   border-radius: 100vw;
   overflow: hidden;
   aspect-ratio: 1 / 1;
