--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -1,36 +1,37 @@
 @use "styles/abstracts" as *;
 
+@font-face {
+    font-family: "raleway";
+    src: url("/fonts/raleway.ttf");
+}
+
 :global(:root) {
-    // Base colors
-    @each $name, $color in $colors {
-        --color-#{"" + $name}: #{$color};
-    }
+    --border-width: 2px;
+    --border-radius: 0.5rem;
 
     @media (prefers-color-scheme: dark) {
         // Text
-        --theme-text: var(--color-beige);
-        --theme-text-dark: var(--color-beige-dark);
-        --theme-text-light: var(--color-beige-light);
+        --theme-text: hsl(39, 48%, 71%);
+        --theme-text-dark: hsl(38, 20%, 37%);
+        --theme-text-light: hsl(38, 23%, 55%);
 
         // Elements
-        --theme-accent: var(--color-gold);
-        --theme-primary: var(--color-black);
-        --theme-error: var(--color-red);
+        --theme-accent: hsl(39, 68%, 60%);
+        --theme-primary: hsl(0, 0%, 4%);
+        --theme-error: hsl(0, 57%, 51%);
     }
 
     @media (prefers-color-scheme: light) {
         // Text
-        --theme-text: var(--color-black);
-        --theme-text-dark: var(--color-black-dark);
-        --theme-text-light: var(--color-black-light);
+        --theme-text: hsl(0, 0%, 4%);
+        --theme-text-dark: hsl(0, 0%, 0%);
+        --theme-text-light: hsl(0, 0%, 10%);
 
         // Elements
-        --theme-accent: rgb(141, 63, 11); // TODO: find a pallete that actually works
-        --theme-primary: var(--color-white);
-        --theme-error: var(--color-red);
+        --theme-accent: rgb(0, 38, 255); // TODO: find a pallete that actually works
+        --theme-primary: hsl(45, 8%, 79%);
+        --theme-error: hsl(0, 57%, 51%);
     }
-
-    --border: $border;
 }
 
 :global(.svgStroke) {
@@ -52,13 +53,22 @@
     padding: 0;
     margin: 0;
 
-    font-family: $font;
+    font-family: "raleway", Helvetica, sans-serif;
 }
 
 :global(html, body) {
-    overflow-x: hidden;
-    background-color: var(--theme-primary);
+    max-width: 100vw;
+    color-scheme: dark light;
+
     color: var(--theme-text);
+}
+
+:global(body) {
+    min-height: 100%;
+}
+
+:global(html) {
+    background-color: var(--theme-primary);
 }
 
 :global(a) {
