--- a/app/src/components/input/button.scss
+++ b/app/src/components/input/button.scss
@@ -4,7 +4,7 @@
     @include baseComponent;
     @include componentSizes;
 
-    border-radius: 100vmin;
+    border-radius: var(--border-radius);
     border: none;
 
     background-color: transparent;
@@ -18,6 +18,11 @@
 
     &:active {
         transform: scale(0.95);
+    }
+
+    &:disabled {
+        cursor: not-allowed;
+        opacity: 0.5;
     }
 
     cursor: pointer;
