--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -28,9 +28,9 @@
         --theme-text-light: hsl(0, 0%, 10%);
 
         // Elements
-        --theme-accent: rgb(0, 38, 255); // TODO: find a pallete that actually works
-        --theme-primary: hsl(45, 8%, 79%);
-        --theme-error: hsl(0, 57%, 51%);
+        --theme-accent: hsl(44, 100%, 25%); // TODO: find a pallete that actually works
+        --theme-primary: hsl(37, 15%, 62%);
+        --theme-error: hsl(0, 53%, 27%);
     }
 }
 
