🛠️ Small improvements + better light theme

--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -28,8 +28,8 @@
         --theme-text-light: hsl(0, 0%, 10%);
 
         // Elements
-        --theme-accent: hsl(44, 100%, 25%); // TODO: find a pallete that actually works
-        --theme-primary: hsl(37, 15%, 62%);
+        --theme-accent: hsl(244, 96%, 44%);
+        --theme-primary: hsl(32, 41%, 75%);
         --theme-error: hsl(0, 53%, 27%);
     }
 }
