--- a/app/src/components/input/button.scss
+++ b/app/src/components/input/button.scss
@@ -16,7 +16,7 @@
     transform: scale(1);
     transition: transform 100ms ease-in-out;
 
-    &:active {
+    &:active:not(:disabled) {
         transform: scale(0.95);
     }
 
@@ -33,8 +33,8 @@
     color: var(--theme-primary);
     background-color: var(--theme-text);
 
-    &:focus-visible,
-    &:hover {
+    &:focus-visible:not(:disabled),
+    &:hover:not(:disabled) {
         outline: none;
         background-color: var(--theme-accent);
     }
@@ -43,10 +43,10 @@
 .button[data-variant="secondary"] {
     color: var(--theme-text);
     background-color: transparent;
-    border: 1px solid currentColor;
+    border: 2px solid currentColor;
 
-    &:focus-visible,
-    &:hover {
+    &:focus-visible:not(:disabled),
+    &:hover:not(:disabled) {
         outline: none;
         color: var(--theme-accent);
     }
