--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -74,9 +74,10 @@
 }
 
 :global(body) {
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+    height: 100vh;
+    overflow: hidden;
 }
 
 :global(html) {
