--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @use "styles/abstracts" as *;
+@use "styles/themes" as *;
 
 @font-face {
     font-family: "raleway";
@@ -13,29 +14,11 @@
     --border-radius: 0.5rem;
 
     @media (prefers-color-scheme: dark) {
-        // Text
-        --theme-text: hsl(39, 48%, 71%);
-        --theme-text-dark: hsl(38, 20%, 37%);
-        --theme-text-light: hsl(38, 23%, 55%);
-
-        // Elements
-        --theme-accent: hsl(39, 68%, 60%);
-        --theme-primary: hsl(0, 0%, 4%);
-        --theme-secondary: hsl(0, 0%, 10%);
-        --theme-error: hsl(0, 57%, 51%);
+        @include darkTheme;
     }
 
     @media (prefers-color-scheme: light) {
-        // Text
-        --theme-text: hsl(0, 0%, 4%);
-        --theme-text-dark: hsl(0, 0%, 0%);
-        --theme-text-light: hsl(0, 0%, 10%);
-
-        // Elements
-        --theme-accent: hsl(1.8deg 58.82% 32.71%);
-        --theme-primary: hsl(32deg 60.53% 82.98%);
-        --theme-secondary: hsl(0, 0%, 95%);
-        --theme-error: hsl(0, 53%, 27%);
+        @include lightTheme;
     }
 }
 
@@ -75,11 +58,8 @@
 :global(body) {
     display: grid;
     grid-template-rows: min-content 1fr min-content;
-    height: 100vh;
-}
-
-:global(html) {
     background-color: var(--theme-primary);
+    height: 100vh;
 }
 
 :global(a) {
@@ -94,8 +74,8 @@
 }
 
 :global(::-webkit-scrollbar) {
-    width: 5px;
-    height: 5px;
+    width: 8px;
+    height: 8px;
 }
 
 :global(::-webkit-scrollbar-thumb) {
@@ -113,6 +93,6 @@
 :global(textarea) {
     &:focus-visible {
         outline: var(--border-width) solid var(--theme-accent);
-        outline-offset: 2px;
+        outline-offset: 3px;
     }
 }
