✨ More flexible card filtering, min/max player filtering, changed setup order

--- a/src/styles/abstracts/_utils.scss
+++ b/src/styles/abstracts/_utils.scss
@@ -15,3 +15,12 @@
     outline: var(--border-width) solid var(--theme-accent);
     outline-offset: 2px;
 }
+
+@mixin animatedNumber {
+    transition: --animatedNumber 0.5s;
+    counter-set: num var(--animatedNumber);
+
+    &::before {
+        content: counter(num);
+    }
+}
